--- a/index.html
+++ b/index.html
@@ -15,9 +15,38 @@
     <p>That's it for the links</p>
     <img src="./images/dog.jpg" alt="dog">
 </body>
-</html>
+
 <body> 
 <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo"> 
 
+<p>This page covers common image formats, but you may also be looking for <a
+    href='links.html'>links</a> and <a href='misc/extras.html'>useful
+    extras</a>.</p>
+ 
+ <h2>JPGs</h2>
+ 
+ <p>JPG images are good for photos.</p>
+ 
+ <img src='images/mochi.jpg'/>
 
 </body>
+
+<h2>GIFs</h2>
+
+<p>GIFs are good for animations.</p>
+
+<img src='images/mochi.gif'/>
+
+<h2>PNGs</h2>
+
+<p>PNGs are good for diagrams and icons.</p>
+
+<img src='images/mochi.png'/>
+
+<h2>SVGs</h2>
+
+<p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
+
+<img src='images/mochi.svg'/>
+
+</html>
