--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 <body> 
 <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo"> 
 
-<p>This page covers common image formats, but you may also be looking for <a
-    href='links.html'>links</a> and <a href='misc/extras.html'>useful
-    extras</a>.</p>
  
  <h2>JPGs</h2>
  
@@ -48,5 +45,7 @@
 <p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
 
 <img src='images/mochi.svg'/>
+
+<p> Just adding text here because I want to try a new commit message.</p>
 
 </html>
