--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
 <img src='images/mochi.svg'/>
 
 <p> Just adding text here because I want to try a new commit message.</p>
-
+<p> one more</p>
 </html>
